ADD: Endpoint to add data to knowledge base
