# api/endpoints.go
@@ -28,3 +28,28 @@ func CreateKB(c echo.Context) error {
 	}
 	return c.NoContent(http.StatusOK)
 }
+
+// @Summary Add data to a knowledge base
+// @Description Add string data to a knwoledge base, it creates the KB if the flag is set
+// @Tags knowledge-base
+// @Param request body pkg.KBAddDataInstruct true "Data to add to the KB"
+// @Accept json
+// @Produce json
+// @Success 200
+// @Failure 400 {string} string "KB does not exist"
+// @Router /knowledge-base [post]
+func AddDataToKB(c echo.Context) error {
+	rag, ok := c.Get(RAGKey).(*pkg.RAG)
+	if !ok {
+		return c.String(http.StatusInternalServerError, "RAG is not set")
+	}
+	var instruction pkg.KBAddDataInstruct
+	if err := c.Bind(&instruction); err != nil {
+		return c.String(http.StatusBadRequest, "Invalid data")
+	}
+	err := rag.AddDataToKB(instruction)
+	if err != nil {
+		return c.String(http.StatusBadRequest, "KB does not exist")
+	}
+	return c.NoContent(http.StatusOK)
+}
